# flask-weather-app

./: .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  generate_icons.py  generate_screenshot.py  main.py  pyproject.toml  request.http  requirements.txt  test_api.py
.github/prompts/: commit.prompt.md
flask_weather/: __init__.py  config.py  models.py  utils.py
flask_weather/auth/: forms.py  routes.py
flask_weather/main/: routes.py
flask_weather/routes/: __init__.py
flask_weather/static/: manifest.json  style.css  sw.js
flask_weather/taiwan_weather/: __init__.py  forms.py  routes.py
flask_weather/templates/: base.html  dashboard.html  index.html  taiwan_weather.html  weather.html
flask_weather/templates/auth/: login.html  register.html
flask_weather/weather/: __init__.py  forms.py  routes.py
migrations/versions/: 0d06eece2ce6_initial_migration_with_all_tables.py  0e91f46c16e6_change_password_hash_length.py
tests/: conftest.py  test_app.py  test_filters.py  test_model.py  test_routes.py
